[metadata]
name = ramstk
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[extract_messages]
input_dirs = src/ramstk/
output_file = locale/rtk.pot

[compile_catalog]
domain = ramstk
directory = locale

[pycodestyle]
count = True
exclude =
    .git,
    .tox,
    *.pyc,
    *.pyo,
    build,
    dist,
    *.egg-info
    config,
    docs,
    locale,
    tests,
    tools
format = pylint
ignore =
    E0121,
    E0123,
    E0133,
    E0242,
    W503
max-line-length = 79
statistics = True

[yapf]
based_on_style = pep8
split_before_arithmetic_operator = true
