[bumpversion]
current_version = 1.0.0.alpha1

[metadata]
name = ramstk
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[compile_catalog]
domain = ramstk
directory = locale

[extract_messages]
input_dirs = src/ramstk/
output_file = locale/rtk.pot

[mypy]
allow_subclassing_any = True
follow_imports = skip
implicit_reexport = True
plugins = sqlmypy

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-pubsub.*]
ignore_missing_imports = True

[mypy-sortedcontainers.*]
ignore_missing_imports = True

[mypy-treelib.*]
ignore_missing_imports = True

[pycodestyle]
count = True
exclude =
    .git,
    .tox,
    *.pyc,
    *.pyo,
    build,
    dist,
    *.egg-info
    config,
    docs,
    locale,
    tests,
    tools
format = pylint
ignore =
    E0121,
    E0123,
    E0133,
    E0242,
    W503
max-line-length = 79
statistics = True

[pydocstyle]
ignore =
    D203,
    D204,
    D213

[yapf]
based_on_style = pep8
split_before_arithmetic_operator = true
split_penalty_arithmetic_operator = 300
split_before_logical_operator = true
split_penalty_import_names = 300
